name of  package

--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "moeen/helpsupport",
+    "name": "moeen1/helpsupport",
     "description": "This package provide a help support system",
     "type": "library",
     "autoload": {
